Add profiling support to the paint analyzer

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -54,6 +54,7 @@ set(gammaray_srcs
   paintbuffer.cpp
   paintbuffermodel.cpp
   paintanalyzer.cpp
+  painterprofilingreplayer.cpp
 
   remoteviewserver.cpp
 
