--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -72,6 +72,7 @@ else()
   set_target_properties(gammaray_probe PROPERTIES OUTPUT_NAME gammaray_probe-${GAMMARAY_PROBE_ABI})
   if(WIN32)
     set_target_properties(gammaray_winloader PROPERTIES OUTPUT_NAME gammaray_winloader-${GAMMARAY_PROBE_ABI})
+    install(TARGETS gammaray_winloader ${INSTALL_TARGETS_DEFAULT_ARGS})
   endif()
   if(NOT GAMMARAY_PROBE_ONLY_BUILD)
     install(TARGETS gammaray_probe EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
@@ -85,17 +86,11 @@ else()
     install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
     install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/gammaray_probe-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
 
-    if(WIN32)
-      install(TARGETS gammaray_winloader ${INSTALL_TARGETS_DEFAULT_ARGS})
-    endif()
   else()
     install(TARGETS gammaray_probe ${INSTALL_TARGETS_DEFAULT_ARGS})
-  if(WIN32)
-    install(TARGETS gammaray_winloader ${INSTALL_TARGETS_DEFAULT_ARGS})
   endif()
+  if(MSVC)
+     install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_probe>/$<TARGET_PDB_FILE_NAME:gammaray_probe>" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
   endif()
-      if(MSVC)
-      install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_core>/$<TARGET_PDB_FILE_NAME:gammaray_core>" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
-    endif()
 endif()
-endif()
+endif() # GAMMARAY_CLIENT_ONLY_BUILD
