Use relative RPATHs on Linux
This makes the installation relocatable even when using RPATH, which helps
with deployment as part of custom installers/SDKs which are usually not
installed in the system search path (unlike distro packages).

--- a/3rdparty/kde/CMakeLists.txt
+++ b/3rdparty/kde/CMakeLists.txt
@@ -17,6 +17,7 @@ set_target_properties(gammaray_kitemmodels PROPERTIES
   OUTPUT_NAME gammaray_kitemmodels-${GAMMARAY_PROBE_ABI}
   DEFINE_SYMBOL MAKE_KITEMMODELS_LIB
 )
+gammaray_set_rpath(gammaray_kitemmodels ${LIB_INSTALL_DIR})
 
 if(NOT GAMMARAY_PROBE_ONLY_BUILD)
   install(TARGETS gammaray_kitemmodels EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
