--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -60,6 +60,7 @@ endif()
 
 if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
   set_target_properties(gammaray_probe PROPERTIES PREFIX "")
+  gammaray_set_rpath(gammaray_probe ${PROBE_INSTALL_DIR})
   install(TARGETS gammaray_probe DESTINATION ${PROBE_INSTALL_DIR})
   if(MSVC)
     install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_core>/$<TARGET_PDB_FILE_NAME:gammaray_core>" DESTINATION ${PROBE_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
@@ -70,6 +71,7 @@ if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
   endif()
 else()
   set_target_properties(gammaray_probe PROPERTIES OUTPUT_NAME gammaray_probe-${GAMMARAY_PROBE_ABI})
+  gammaray_set_rpath(gammaray_probe ${LIB_INSTALL_DIR})
   if(WIN32)
     set_target_properties(gammaray_winloader PROPERTIES OUTPUT_NAME gammaray_winloader-${GAMMARAY_PROBE_ABI})
     install(TARGETS gammaray_winloader ${INSTALL_TARGETS_DEFAULT_ARGS})
@@ -85,7 +87,6 @@ else()
 
     install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
     install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/gammaray_probe-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
-
   else()
     install(TARGETS gammaray_probe ${INSTALL_TARGETS_DEFAULT_ARGS})
   endif()
