Gammaray: use GNUInstallDirs so that LIB_SUFFIX is no longer needed.
Summary: GNUInstallDirs auto-detects whether lib64 is needed

Now it installs to lib64 on OpenSuSE, which fixes
[...]/lib/gammaray/libexec/gammaray-client: error while loading shared libraries: libgammaray_client.so.2.9.0: cannot open shared object file: No such file or directory
without the need to set LD_LIBRARY_PATH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -618,9 +618,8 @@ if(APPLE)
     set(BUNDLE_INSTALL_DIR "bin")
     set(RESOURCES_INSTALL_DIR "${BUNDLE_INSTALL_DIR}/${BUNDLE_APP_NAME}/Contents/Resources")
     set(BIN_INSTALL_DIR "bin")
-    set(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
     set(INCLUDE_INSTALL_DIR "include/gammaray")
-    set(LIB_INSTALL_DIR "lib${LIB_SUFFIX}")
+    set(LIB_INSTALL_DIR "lib")
     set(LIBEXEC_INSTALL_DIR "libexec")
     set(CMAKECONFIG_INSTALL_DIR "${LIB_INSTALL_DIR}/cmake/GammaRay")
     set(PLUGIN_INSTALL_DIR "${LIB_INSTALL_DIR}/gammaray")
@@ -651,17 +650,21 @@ if(APPLE)
     set(ECM_MKSPECS_INSTALL_DIR "${RESOURCES_INSTALL_DIR}/${ECM_MKSPECS_INSTALL_DIR}")
   endif()
 else()
-  set(BIN_INSTALL_DIR "bin")
-  set(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
-  set(LIB_INSTALL_DIR "lib${LIB_SUFFIX}")
-  set(INCLUDE_INSTALL_DIR "include/gammaray")
+  # Set installation paths
+  # This takes care of installing into "lib64" on distros that use that, for instance,
+  # by setting CMAKE_INSTALL_FULL_LIBDIR.
+  include(GNUInstallDirs)
+
+  set(BIN_INSTALL_DIR "${CMAKE_INSTALL_BINDIR}") # relative, usually "bin"
+  set(LIB_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}") # "lib" or "lib64"
+  set(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}/gammaray")
   set(CMAKECONFIG_INSTALL_DIR ${LIB_INSTALL_DIR}/cmake/GammaRay)
-  set(DATAROOTDIR share CACHE PATH "Define install directory for read-only architecture-independent data")
+  set(DATAROOTDIR "${CMAKE_INSTALL_DATAROOTDIR}" CACHE PATH "Define install directory for read-only architecture-independent data")
   set(XDG_APPS_INSTALL_DIR "${DATAROOTDIR}/applications")
   set(APPDATA_INSTALL_DIR "${DATAROOTDIR}/appdata")
   set(ICON_INSTALL_DIR "${DATAROOTDIR}/icons")
   set(MAN_INSTALL_DIR "${DATAROOTDIR}/man/man1")
-  set(QCH_INSTALL_DIR "doc" CACHE STRING "Install location of Qt Assistant help files.")
+  set(QCH_INSTALL_DIR "${CMAKE_INSTALL_DOCDIR}" CACHE STRING "Install location of Qt Assistant help files.")
   if(WIN32)
     set(PLUGIN_INSTALL_DIR "plugins/gammaray")
     set(LIBEXEC_INSTALL_DIR "${BIN_INSTALL_DIR}")
