--- a/ui/resources/CMakeLists.txt
+++ b/ui/resources/CMakeLists.txt
@@ -1,5 +1,4 @@
 # See https://standards.freedesktop.org/icon-theme-spec/icon-theme-spec-latest.html
-
 if(UNIX AND NOT APPLE AND GAMMARAY_BUILD_UI)
     foreach(size 16 24 32 48 64 128 256 512)
         foreach(scale 1 2 3)
@@ -26,3 +25,19 @@ if(APPLE)
         install(FILES gammaray/GammaRay.icns DESTINATION "${RESOURCES_INSTALL_DIR}")
     endif()
 endif()
+
+# generate the class icon qrc file
+file(READ "classiconindex.map" _map_content)
+string(REPLACE "\n" ";" _map_content ${_map_content})
+set(QRC_CONTENT "")
+foreach (_icon_data IN LISTS _map_content)
+    if (NOT _icon_data)
+        continue()
+    endif()
+    string(REPLACE " " ";" _icon_data ${_icon_data})
+    list(GET _icon_data 0 _icon_name)
+    list(GET _icon_data 1 _icon_file)
+    set(QRC_CONTENT "${QRC_CONTENT}\n        <file alias=\"${_icon_name}\">${CMAKE_CURRENT_SOURCE_DIR}/gammaray/ui/icons/classes/${_icon_file}</file>")
+endforeach()
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/classicons.qrc.in
+               ${CMAKE_CURRENT_BINARY_DIR}/classicons.qrc)
