--- a/plugins/translatorinspector/CMakeLists.txt
+++ b/plugins/translatorinspector/CMakeLists.txt
@@ -5,7 +5,7 @@ gammaray_add_plugin(gammaray_translatorinspector
   SOURCES translatorinspector.cpp translatorinspectorinterface.cpp translatorwrapper.cpp translatorsmodel.cpp
 )
 target_include_directories(gammaray_translatorinspector SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
-target_link_libraries(gammaray_translatorinspector gammaray_core Qt5::Core Qt5::Gui)
+target_link_libraries(gammaray_translatorinspector gammaray_core Qt5::Core)
 endif()
 
 # ui part
