--- a/plugins/qt3dinspector/geometryextension/CMakeLists.txt
+++ b/plugins/qt3dinspector/geometryextension/CMakeLists.txt
@@ -1,3 +1,3 @@
 glslang_validate_program(passthrough.vert normals.geom normals.frag)
-glslang_validate_program(passthrough.vert wireframe.geom wireframe.frag)
+glslang_validate_program(wireframe.vert wireframe.geom wireframe.frag)
 glslang_validate_program(skybox.vert skybox.frag)
