Update appveyor build to Qt 5.10.0

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -35,12 +35,12 @@ ShortPath/JunctionDir = ${Variables:Root}/csp
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:APPVEYOR_BUILD_FOLDER}/cache
-Packager/RepositoryUrl = http://downloads.kdab.com/ci/cache
+Packager/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray
 Compile/BuildType = Release
 Compile/BuildTests = False
 ContinuousIntegration/Enabled=True
 ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/gammaray/binaries/
-QtSDK/Version=5.9.2
+QtSDK/Version=5.10.0
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 QtSDK/PackageQtSDK=False
