Port the class icon index generator from C++ to CMake
This makes it a lot easier to use in cross-compilation scenarios, as we
don't need to deal with running host code anymore.

# Conflicts:
#	common/CMakeLists.txt
#	common/classesiconsextractor.cpp
#	ui/CMakeLists.txt
#	ui/resources/ui.qrc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -320,7 +320,7 @@ endif()
 
 if(Qt5Core_FOUND)
   set_package_properties(Qt5Core PROPERTIES TYPE REQUIRED)
-  find_package(Qt5 NO_MODULE REQUIRED COMPONENTS Gui Network Xml)
+  find_package(Qt5 NO_MODULE REQUIRED COMPONENTS Gui Network)
   find_package(Qt5 NO_MODULE QUIET OPTIONAL_COMPONENTS
     3DExtras
     3DInput
