Create also a 7z image

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -38,7 +38,6 @@ ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/gammaray/bina
 QtSDK/Version=5.10.0
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
-QtSDK/PackageQtSDK=False
 Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
 
 [BlueprintSettings]
@@ -66,5 +65,7 @@ General/ABI = windows-mingw_32-gcc
 General/Options = qt-apps/gammaray.gammarayProbeOnly = True;qt-apps/gammaray.disableGammarayBuildCliInjector = True
 
 [windows-msvc2017_64-cl]
+# create a portable 7z and an installer
+Packager/PackageType = MultiCollectionPackager
 QtSDK/Compiler = msvc2017_64
 General/ABI = windows-msvc2017_64-cl
