Allow to override build RPATH settings
Should not be needed for most users, but is useful in some packaging build
environments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,8 +78,12 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_SKIP_BUILD_RPATH ON)
-set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+if(NOT DEFINED CMAKE_SKIP_BUILD_RPATH)
+  set(CMAKE_SKIP_BUILD_RPATH ON)
+endif()
+if(NOT DEFINED CMAKE_BUILD_WITH_INSTALL_RPATH)
+  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+endif()
 if(NOT DEFINED CMAKE_INSTALL_RPATH_USE_LINK_PATH)
   set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 endif()
