Unify minimum CMake version to 3.1 on all platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,11 +56,7 @@
 # The man page is not available on Windows.
 #
 
-if(MSVC)
-  cmake_minimum_required(VERSION 3.1.0) # b/c of TARGET_PDB_FILE_DIR generator expression
-else()
-  cmake_minimum_required(VERSION 3.0) # b/c of AUTOUIC/AUTORCC
-endif()
+cmake_minimum_required(VERSION 3.1.0)
 
 cmake_policy(SET CMP0020 NEW)
 cmake_policy(SET CMP0043 NEW)
