--- a/plugins/qmlsupport/CMakeLists.txt
+++ b/plugins/qmlsupport/CMakeLists.txt
@@ -11,15 +11,15 @@ set(gammaray_qmlsupport_srcs
   qmltypeextension.cpp
 )
 
+if(NOT Qt5Qml_VERSION VERSION_LESS 5.10)
+    set(gammaray_qmlsupport_srcs ${gammaray_qmlsupport_srcs} qmlbindingprovider.cpp)
+endif()
+
 gammaray_add_plugin(gammaray_qmlsupport JSON gammaray_qmlsupport.json SOURCES ${gammaray_qmlsupport_srcs})
 target_include_directories(gammaray_qmlsupport SYSTEM PRIVATE ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
 target_link_libraries(gammaray_qmlsupport gammaray_core Qt5::Qml)
 endif()
 
-
-if(NOT Qt5Qml_VERSION VERSION_LESS 5.10)
-    target_sources(gammaray_qmlsupport PUBLIC qmlbindingprovider.cpp)
-endif()
 
 # ui plugin
 if(GAMMARAY_BUILD_UI)
